limpeza de dado

--- a/ProjetoWeb_Stories/Views/Postagem/Feed.cshtml
+++ b/ProjetoWeb_Stories/Views/Postagem/Feed.cshtml
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>  
-    <div class="container red">
+    <div class="container">
         <div class="main-body">
             <div class="row">
                 <div class="col-lg-4">
