página do storie aberto

--- a/ProjetoWeb_Stories/Views/Postagem/Storie.cshtml
+++ b/ProjetoWeb_Stories/Views/Postagem/Storie.cshtml
@@ -1,5 +1,90 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+
+    <title>Rede Social Uniftec</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/13530689e8.js" crossorigin = "anonymous" ></script>
+    <style type="text/css">
+
+        body {
+            margin-top: 20px;
+            background: #FFE7D3;
+        }
+
+        .account-block {
+            padding: 0;
+            background: #000000;
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 100%;
+            position: relative;
+        }
+
+            
+
+        .text-theme {
+            color: #5369f8 !important;
+        }
+
+        .btn-theme {
+            background-color: #5369f8;
+            border-color: #5369f8;
+            color: #fff;
+        }
+
+        .card-body-storie {
+            margin-bottom:300px;
+            -webkit-box-flex: 1;
+            -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+            padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
+            color: var(--bs-card-color);
+        }
+
+        .card {
+            background-color: #fff;
+
+        }
+        .icone-like{
+            font-size: 100px;
+        }
+
+        .storie-img{
+            align-content: center !important;
+            align-items: center !important;
+            justify-content: center !important;
+            align-self: center !important;
+            justify-items: center !important;
+            justify-self: center !important;
+        }
+
+    </style>
+</head>
+<body>
+    <div id="main-wrapper" class="container">
+                        <div class="row no-gutters">
+                       <div class="col-lg-3 card">
+                                <div class="p-5">
+                                    <div class="card-body-storie pt-0">
+                        <div class="d-flex flex-column align-items-center text-center">
+                            <img src="https://social.webestica.com/assets/images/post/1by1/02.jpg" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
+                            <div class="mt-3">
+                                <h4>João Silva</h4>
+                                
+                            </div>
+                        </div>
+                                     </div>
+                    <i class="fa-regular fa-heart icone-like d-flex flex-column align-items-center text-center" onclick=""></i>
+                                </div>
+                            </div>
+                            <div class="col-lg-9 d-none d-lg-inline-block">
+                                <div class="account-block rounded-right ">
+                    <img class="card-img storie-img" src="https://images.unsplash.com/photo-1533770966393-c9e3dd4d9562?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Post">
+                                </div>
+                            </div>
+                        </div>
+                </div>
+</body>
