postando e visualizando stories

--- a/Frontend/ProjetoWeb_Stories/Views/Postagem/Storie.cshtml
+++ b/Frontend/ProjetoWeb_Stories/Views/Postagem/Storie.cshtml
@@ -89,8 +89,8 @@
                             </div>
                             <div class="col-lg-9 d-none d-lg-inline-block">
                                 <div class="account-block rounded-right ">
-                    <img class="card-img storie-img" src="https://images.unsplash.com/photo-1533770966393-c9e3dd4d9562?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Post">
-                     
+                    @* <img class="card-img storie-img" src="https://images.unsplash.com/photo-1533770966393-c9e3dd4d9562?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Post"> *@
+                    <img class="card-img storie-img"  src="@ViewBag.ImagemBase64" alt="Imagem" />
                 </div>
                             </div>
                         </div>
