--- a/Frontend/ProjetoWeb_Stories/Views/Postagem/Feed.cshtml
+++ b/Frontend/ProjetoWeb_Stories/Views/Postagem/Feed.cshtml
@@ -84,8 +84,13 @@
                                 <div class="position-relative">
                                     <div class="card border border-2 border-dashed h-150px px-4 px-sm-5 shadow-none d-flex align-items-center justify-content-center text-center">
                                         <div>
-                                            <a class="stretched-link btn btn-light rounded-circle icon-md" asp-controller="Postagem" asp-action="NovoStory"><i class="fa-solid fa-plus"></i></a>
-                                            <h6 class="mt-2 mb-0 small">Adicionar um Story</h6>
+                                            <label for="file">Postar um story:</label>
+                                            <form asp-action="NovoStory" asp-controller="Postagem" method="post" enctype="multipart/form-data">
+                                                <div class="form-group">
+                                                    <input type="file" class="form-control-file" id="file" name="file">
+                                                </div>
+                                                <button type="submit" class="btn btn-primary">Salvar</button>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
@@ -94,7 +99,7 @@
                                     @foreach (var storyGroup in ViewBag.StoriesAgrupados)
                                     {
                                         <div class="story " data-id="user-1" data-photo="https://social.webestica.com/assets/images/post/1by1/02.jpg" data-last-updated="1712421528.864">
-                                            <a class="item-link" asp-controller="Postagem" asp-action="Storie">
+                                            <a class="item-link" asp-controller="Postagem" asp-action="Storie" asp-route-selectedId=@storyGroup.StorieId>
                                                 <span class="item-preview">
                                                     <img lazy="eager" src="https://social.webestica.com/assets/images/post/1by1/02.jpg">
                                                 </span>
