--- a/Frontend/ProjetoWeb_Stories/Views/Usuario/Login.cshtml
+++ b/Frontend/ProjetoWeb_Stories/Views/Usuario/Login.cshtml
@@ -33,11 +33,11 @@
                         @Html.ValidationSummary()
                         <div class="form-group">
                             <h3 class="h5 mb-2 text-center">Login:</h3>
-                            <input type="text" class="form-control input-lg" placeholder="Email">
+                    <input type="email" class="form-control input-lg" placeholder="Email" id="login.email" name="login.email">
                         </div>
                         <div class="form-group">
                             <h3 class="h5 mb-2 text-center">Senha:</h3>
-                            <input type="password" class="form-control input-lg" placeholder="Senha">
+                    <input type="password" class="form-control input-lg" placeholder="Senha" id="login.senha" name="login.senha">
                         </div>
                         <div class="form-group">
                             <button class="btn btn-primary btn-lg btn-block">Entrar</button>
