--- a/Frontend/ProjetoWeb_Stories/Views/Postagem/Feed.cshtml
+++ b/Frontend/ProjetoWeb_Stories/Views/Postagem/Feed.cshtml
@@ -49,9 +49,11 @@
                                 <!-- Avatar -->
                                 <div class="d-flex flex-column align-items-center text-center">
                                     <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
+                                    
+                                    
                                     <div class="mt-3">
-                                        <h4>Jonas Brother</h4>
-                                    </div>
+                                        <h4>@ViewBag.UsuarioLogado.Nome @ViewBag.UsuarioLogado.Sobrenome </h4>
+                                     </div>
                                 </div>
                                 <!-- User stat START -->
                                 <div class="hstack gap-2 gap-xl-3 justify-content-center">
