--- a/Frontend/ProjetoWeb_Stories/Views/Postagem/Storie.cshtml
+++ b/Frontend/ProjetoWeb_Stories/Views/Postagem/Storie.cshtml
@@ -79,12 +79,14 @@
                         <div class="d-flex flex-column align-items-center text-center">
                             <img src="https://social.webestica.com/assets/images/post/1by1/02.jpg" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
                             <div class="mt-3">
-                                <h4>@Model.Usuario.Nome </h4>
+                                <h4>@Model.Usuario.Nome</h4>
                                 
                             </div>
                         </div>
                                      </div>
-                    <i class="fa-regular fa-heart icone-like d-flex flex-column align-items-center text-center" onclick=""></i>
+                    <a class="item-link" asp-controller="Postagem" asp-action="Like" asp-route-storieId="@ViewBag.Storie.Id">
+                        <button class="fa-regular fa-heart icone-like d-flex flex-column align-items-center text-center" onclick=""></button>
+                    </a>
                                 </div>
                             </div>
                             <div class="col-lg-9 d-none d-lg-inline-block">
